# dreamscroll

./: .dockerignore  .gcloudignore  .gitignore  Cargo.toml  Dockerfile  cloudbuild.yaml  config_local.env  curl-format.txt  docker-build-push.sh  docker-compose.yaml  docker-fake-gcs-emulator.sh  ds_config.env  ds_config_local.env  ds_local_config.env  emulator_init_pubsub.sh  init-pubsub-emulator.sh  init_pubsub_emulator.sh  prod-api-token.sh
_project/: devlog.md  philosophy.md  todo.md
_project/gcloud/: cloud_task_queue.md  cloudsql_postgres.md  vertex_collection.md
_project_meta/: devlog.md  todo.md
localdev/: dreamspot.db  readme.md  readme.txt
meta/: todo.md
meta/test_images_uniq/: 008a2961-dfab-4ced-ac84-717b7cf28241  0141aef3-9762-409a-a83e-adf93512d7d3  08e4688d-0337-4dde-b4cf-efd262d308a7  0a73390c-5e48-4f68-8610-f713f48259f1  10115d4e-7187-4366-87ce-e27d2da8a68f  10c64a63-22c5-4e80-8d02-b7e0322d9dac  10e88748-74be-4c96-824d-180df354ccac  163386ee-fce2-4b0b-9a5b-6784d78f403e  195a5757-fcdb-4dcf-bb37-f281654824ae  19eabb75-2221-423a-abf0-edf1eaf15ea6  1e2e0f2e-ec21-41f0-b373-1b32c26337e7  2599fad1-46b9-4f9d-97cb-48804fdd6fdc  25d1c936-46e3-4312-a0a5-55eba9fe73a6  265ca60b-f984-4459-84d9-5080606d63bc  27e741a6-96ba-4287-84f4-03d1598d6281  2c0c1a0b-1cb2-4241-9f7c-d7f5eaf7a2cc  3448b2d0-4218-4da3-a8b6-d73adf5c39d4  3aa56025-1177-4b90-99a0-4e3cf2f4834e  3cf68b47-12e4-42c3-a746-3802a93c4490  3deab817-9d97-4b53-a11e-0deff755d1a0  41807477-03c6-4f8c-a3b0-dfba5d1b5759  41de4ab4-2b5f-41e1-95f3-cbe1e7e021b7  4549dc5e-a423-4c9b-85d1-39754225a839  46ccbc42-8d63-4489-834d-f234f4187b11  4ae4c442-82f6-4ee9-a39a-4e393f1596d3  4ba4a16e-b47c-44a6-ab88-feb785514456  4f12d440-b022-4189-b5ed-f077661d20bf  562a45c0-ecfb-4a1b-971d-133377116e66  5a52513a-1360-4748-ab6c-4319206dc9d4  5aa6ff27-1aae-40b1-9a59-e90f204f7713  6c76e69e-8459-4ec1-9e2e-035192771335  7e2fdfa9-8cfd-4f1d-9a4c-d99129062cfa  87d23bdb-f037-43a7-afea-1b446d1c35bd  884db6fb-51dc-4fe8-a47f-fa08c011d978  89008aa5-29ad-498d-9fb2-727ba44da78d  8d062ac4-46ca-41d5-8f04-419f98c920b4  8eff4439-9ead-4aa1-a5ae-9d9338174666  94e3d4e7-b22c-49b8-8743-997c219f08d7  9545dccc-5f85-41da-baa6-d49351bc8876  95d5f801-c55d-4a40-87b6-809ea2a7e337  (+18 more)
src/: lib.rs  main.rs
src/api/: apierror.rs  captureinfo.rs  client.rs  get_capture.rs  get_entity.rs  get_illumination.rs  get_storage.rs  get_timeline.rs  illuminationinfo.rs  infomaker.rs  insert_illumination.rs  knodeinfo.rs  mediainfo.rs  mod.rs  search.rs  socialmediainfo.rs  storage.rs  userinfo.rs
src/auth/: autherror.rs  authuser.rs  backend.rs  context.rs  jwt.rs  jwterror.rs  mod.rs  password.rs  pubsub_oidc.rs  service.rs  sessionstorewrapper.rs  user.rs  webauthbackend.rs  webautherror.rs  webauthuser.rs
src/cmd_util/: create_user.rs  export_uniq.rs  illuminate.rs  import.rs
src/common/: convenience.rs  error.rs  filehash.rs  mod.rs  oneshotqueue.rs  rezqueue.rs  timestamp_human.rs
src/config/: mod.rs
src/controller/: captureinfo.rs  illuminationinfo.rs  mod.rs
src/core/: mod.rs
src/database/: config.rs  connect.rs  connect_postgres.rs  connect_sqlite.rs  mod.rs  postgres.rs  sqlite.rs
src/db/: config.rs  core.rs  helper.rs  mod.rs  postgres.rs  postgressql.rs  sqlite.rs
src/entity/: capture.rs  illumination.rs  media.rs
src/facility/: check_first_user.rs  check_first_users.rs  check_users.rs  cloud_logging_format.rs  config.rs  load_local_config.rs  mod.rs  tracing.rs
src/ignition/: firestarter.rs  gemini.rs  grok.rs  maker.rs  mod.rs  prompt.rs  util.rs
src/illumination/: gemini.rs  geministructured.rs  grok.rs  illuminator.rs  loremipsum.rs  maker.rs  mod.rs  processor.rs  simple.rs  simpleworker.rs  task_publisher.rs  worker.rs
src/model/: annotation.rs  capture.rs  illumination.rs  illumination_meta.rs  k_node.rs  knode.rs  media.rs  mod.rs  search_index.rs  social_media.rs  spark.rs  spark_cluster.rs  spark_cluster_ref.rs  spark_input_ref.rs  spark_link.rs  spark_meta.rs  spark_output_ref.rs  user.rs  x_query.rs  xquery.rs
src/pubsub/: beacon.rs  gcloud.rs  mod.rs  taskqueue.rs  topicqueue.rs
src/rest/: _local.http  _prod.http  _scratch.http  maker.rs  mod.rs  r_annotation.rs  r_backfill_enqueue.rs  r_capture.rs  r_change_password.rs  r_create_user.rs  r_dummy.rs  r_import_capture.rs  r_pubsub.rs  r_timeline.rs  r_token.rs
src/search/: capture_data_object.rs  capture_embed.rs  capture_embedder.rs  capture_searcher.rs  data_object.rs  docmaker.rs  embedder.rs  embedding.rs  gemini.rs  indexer.rs  mod.rs  prelude.rs  searcher.rs  vectorstore.rs
src/storage/: gcloud.rs  handle.rs  identity.rs  local.rs  mod.rs  provider.rs  s3.rs  url_maker.rs
src/task/: beacon.rs  gcloud.rs  gcloud_taskqueue.rs  maker.rs  mod.rs  processor.rs  task_publisher.rs  taskqueue.rs  taskqueue_cloudtask.rs  taskqueue_firestore.rs  taskqueue_local.rs  taskqueue_pubsub.rs  topicqueue.rs  util.rs
src/util/: backfill.rs  change_password.rs  check_first_user.rs  clear_token.rs  cmd_state.rs  create_user.rs  eval.rs  export_digest.rs  first_user.rs  hash_password.rs  html_view.rs  illuminate_all.rs  illuminate_id.rs  illumination_text.rs  import_digest.rs  mod.rs  search.rs  search_index.rs  (+2 more)
static/: common.css
templates/: detail.html.tera  index.html.tera  search.html.tera
(+258 files in other folders)
