[package]
name = "dreamscroll"
version = "0.1.0"
edition = "2024"
default-run = "localdev"

[lib]
name = "dreamscroll"
path = "src/lib.rs"

[[bin]]
name = "localdev"
path = "src/bin/main_localdev.rs"

[[bin]]
name = "dreamscroll_util"
path = "src/bin/main_util_cmd.rs"

[[bin]]
name = "worker"
path = "src/bin/main_worker.rs"

[dependencies]
anyhow = "1.0.100"
argh = "0.1.13"
argon2 = "0.5.3"
async-trait = "0.1"
axum = "0.8"
axum-extra = { version = "0.10", features = ["multipart", "typed-header", "query"] }
axum-login = "0.18.0"
base64 = "0.21"
blake3 = "1.8.2"
chrono = { version = "0.4", features = ["serde"] }
dyn-clone = "1.0"
google-cloud-auth = "1.5.0"
google-cloud-storage = "1.7.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version="0.13.1", features =["json"]}
rpassword = "7.4.0"
sea-orm = { version = "2.0.0-rc.27", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "schema-sync", "entity-registry"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = {version = "0.27.2", features = ["derive"]}
tera = "1.19"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.17"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tower-sessions = "0.14.0"
tracing = "0.1.44"
tracing-subscriber = { version ="0.3.22", features = ["env-filter", "registry"]}
uuid = { version = "1.0", features = ["v4"] }
webbrowser = "1.0.6"
