[package]
name = "dreamscroll"
version = "0.1.0"
edition = "2024"
default-run = "dreamscroll_localdev"

[lib]
name = "dreamscroll"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
argh = "0.1.13"
argon2 = "0.5.3"
async-trait = "0.1"
axum = "0.8"
axum-extra = { version = "0.10", features = ["multipart", "typed-header", "query"] }
axum-login = "0.18.0"
base64 = "0.21"
blake3 = "1.8.2"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
dyn-clone = "1.0"
envy = "0.4.2"
google-cloud-auth = "1.5.0"
google-cloud-storage = "1.7.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
reqwest = { version="0.13.1", features =["json"]}
rpassword = "7.4.0"
sea-orm = { version = "2.0.0-rc.27", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros", "schema-sync", "entity-registry"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
strum = {version = "0.27.2", features = ["derive"]}
tera = "1.19"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.17"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres", "sqlite"]}
tracing = "0.1.44"
tracing-subscriber = { version ="0.3.22", features = ["chrono", "env-filter", "registry"]}
uuid = { version = "1.0", features = ["v4"] }
webbrowser = "1.0.6"
